stylesheet.css
/* A CSS3 External Stylesheet created by @probably_parker for parkerjohnson.info */

/* MAIN SETTINGS */
html{
  background-color: white;
  width: 100%;
  height: 100%;
  cursor: default;
  }
body{
  font-size: 100%;
  font-family: "Verdana", Geneva, sans-serif;
  }

h1{
  font-size: 2.5em;
  }

h2{
  font-size: 2em;
}

h3{
  font-size: 1.5em;
}
p1, p2, p3{
  font-size: 1em;
}

/* CURSOR SETTINGS */
a:active{
  color: #0000FF;
  }

a:hover{
  color: #0000FF;
  text-decoration: underline;
  }

a:visited{
  color: #990099;
  }
/*Id's*/
#navbar{
  position: absolute;
  height: 100px;
  width: 100%;
  top: 0;
  left: 0;
  right: 0;
  background-color: white;
  box-sizing:content-box;
  -webkit-box-shadow: 0 10px 6px -6px #777;
  -ms-box-shadow: 0 10px 6px -6px #777;
  -moz-box-shadow: 0 10px 6px -6px #777;
  box-shadow: 0 10px 6px -6px #777
  z-index: 1;
}
#titletext{
  position: relative;
  box-sizing: border-box;
  height 100%;
  width: auto;
  display: block;
  float: left;
  vertical-align: middle;
  font-size: 2.5em;
  padding-top: 30px;
  padding-left: 30px;
}

/*Classes*/
div.button{
  position: relative;
  box-sizing: border-box;
  background-color: inherit;
  font-size: 1em;
  text-align: center;
  display: block;
  vertical-align: middle;
  margin:auto;
  padding-top: 10px;
  padding-left: 10px;
  padding-right: 10px;
  width: auto;
  height: 100%;
}

div.button:active, div.button:hover{

}

